my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: musicdraft.com
      http:
        paths:
          - path: /api/v1/authenticationService
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 8081
          - path: /api/v1/cartemazzi
            pathType: Prefix
            backend:
              service:
                name: carta-e-mazzi-service # Sostituisci con il nome del tuo servizio combinato
                port:
                  number: 9092
          - path: /api/v1/homeService
            pathType: Prefix
            backend:
              service:
                name: home-service
                port:
                  number: 8082
          - path: /api/v1/collect
            pathType: Prefix
            backend:
              service:
                name: collectdata-service
                port:
                  number: 9090
          - path: /api/v1/homeService/scambiController
            pathType: Prefix
            backend:
              service:
                name: home-service
                port:
                  number: 8082
          - path: /api/v1/marketplace
            pathType: Prefix
            backend:
              service:
                name: marketplace-service
                port:
                  number: 9091
          - path: /api/v1/matchmakingService/matchmakingController
            pathType: Prefix
            backend:
              service:
                name: matchmaking-service
                port:
                  number: 8083
          - path: /api/v1/matchmakingService/riepilogoPartitaConclusaController
            pathType: Prefix
            backend:
              service:
                name: matchmaking-service
                port:
                  number: 8083
